# Scraper_Litgrid

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  mypy.ini  pyproject.toml
notebooks/: litgrid.csv  scraper.ipynb
